k8s/receiver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cfs-log-receiver
  namespace: cfs-log-viewer
  labels:
    app: cfs-log-receiver
spec:
  selector:
    app: cfs-log-receiver
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
